2018-05-17  Leonardo Sandoval  <leonardo.sandoval.gonzalez@intel.com>

	* sysdeps/x86_64/multiarch/memmove-vec-unaligned-erms.S
	(PREFETCH_ONE_SET): Remove duplicate line.

2018-05-17  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/generic/math-type-macros-double.h: Include
	<math-nan-payload-double.h> after <libm-alias-double.h>.
	* sysdeps/generic/math-type-macros-float.h: Include
	<math-nan-payload-float.h> after <libm-alias-float.h>.
	* sysdeps/generic/math-type-macros-float128.h: Include
	<math-nan-payload-float128.h> after <libm-alias-float128.h>.
	* sysdeps/generic/math-type-macros-ldouble.h: Include
	<math-nan-payload-ldouble.h> after <libm-alias-ldouble.h>.

2018-05-17  Andreas Schwab  <schwab@suse.de>

	* resolv/res_send.c (__res_context_send): Don't set errno when
	returing error after malloc failure.

2018-05-17  H.J. Lu  <hongjiu.lu@intel.com>

	* nptl/allocatestack.c (allocate_stack): Remove the
	!__ASSUME_PRIVATE_FUTEX paths.
	* nptl/descr.h (header): Remove the !__ASSUME_PRIVATE_FUTEX path.
	* nptl/nptl-init.c (__pthread_initialize_minimal_internal):
	Likewise.
	* sysdeps/i386/nptl/tcb-offsets.sym (PRIVATE_FUTEX): Removed.
	* sysdeps/powerpc/nptl/tcb-offsets.sym (PRIVATE_FUTEX): Likewise.
	* sysdeps/sh/nptl/tcb-offsets.sym (PRIVATE_FUTEX): Likewise.
	* sysdeps/x86_64/nptl/tcb-offsets.sym (PRIVATE_FUTEX): Likewise.
	* sysdeps/i386/nptl/tls.h: (tcbhead_t): Remve the
	!__ASSUME_PRIVATE_FUTEX path.
	* sysdeps/s390/nptl/tls.h (tcbhead_t): Likewise.
	* sysdeps/sparc/nptl/tls.h (tcbhead_t): Likewise.
	* sysdeps/x86_64/nptl/tls.h (tcbhead_t): Likewise.
	* sysdeps/unix/sysv/linux/i386/lowlevellock.S: Remove the
	!__ASSUME_PRIVATE_FUTEX macros.
	* sysdeps/unix/sysv/linux/lowlevellock-futex.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/cancellation.S: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.S: Likewise.
	* sysdeps/unix/sysv/linux/kernel-features.h
	(__ASSUME_PRIVATE_FUTEX): Removed.

2018-05-17  Joseph Myers  <joseph@codesourcery.com>
